--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-istanbul":"0.10.1",
     "gulp-plumber":"1.0.0",
     "gulp-jshint":"1.11.2",
-    "supertest":"1.1.0"
+    "supertest":"1.1.0",
+    "rimraf":"2.4.3"
   }
 }
