--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "gulp-plumber":"1.0.0",
     "gulp-jshint":"1.11.2",
     "supertest":"1.1.0",
-    "rimraf":"2.4.3"
+    "del":"2.0.2"
   }
 }
