--- a/src/conf/prod.yml
+++ b/src/conf/prod.yml
@@ -5,7 +5,7 @@ node:
 
 # Database configuration
 database:
-  name: 'test'
+  name: 'prodDb'
   port: 27017
   user: myUser
   password: myPassword
