--- a/package.json
+++ b/package.json
@@ -1,39 +1,52 @@
 {
-  "name": "soft-name",
-  "version": "0.0.1",
-  "description": "App description",
-  "main": "",
-  "homepage":"",
-  "repository" :{
-    "type" : "git",
-    "url" : "http//github.com/"
-  },
-  "keywords":[],
-  "scripts": {
-    "start":"gulp && node ./dist/app dev",
-    "test": "gulp test"
-  },
-  "author": "Marvin Frachet",
-  "license": "MIT",
-  "dependencies":{
-    "underscore":"1.8.3",
-    "colors":"1.1.2",
-    "bunyan":"1.5.1",
-    "js-yaml":"3.4.3"
-  },
-  "devDependencies":{
-    "gulp": "3.9.0",
-    "gulp-babel":"5.1.0",
-    "gulp-uglify": "1.2.0",
-    "mocha": "2.2.5",
-    "gulp-mocha":"2.1.3",
-    "chai": "3.0.0",
-    "sinon":"1.17.0",
-    "gulp-watch":"4.3.5",
-    "gulp-istanbul":"0.10.1",
-    "gulp-plumber":"1.0.0",
-    "gulp-jshint":"1.11.2",
-    "supertest":"1.1.0",
-    "del":"2.0.2"
-  }
+    "name": "soft-name",
+    "version": "0.0.1",
+    "description": "App description",
+    "main": "./dist/app.js",
+    "homepage": "",
+    "repository": {
+        "type": "git",
+        "url": "http//github.com/"
+    },
+    "keywords": [],
+    "scripts": {
+        "start": "gulp && node ./dist/app dev",
+        "test": "gulp test:unit",
+        "lint": "npm run standard"
+    },
+    "author": "Marvin Frachet",
+    "license": "MIT",
+    "dependencies": {
+        "colors": "1.1.2",
+        "bunyan": "1.5.1",
+        "js-yaml": "3.4.3"
+    },
+    "devDependencies": {
+        "babel-core": "^5.5.0",
+        "babel-preset-es2015": "^6.5.0",
+        "chai": "3.0.0",
+        "del": "2.0.2",
+        "gulp": "^3.9.1",
+        "gulp-babel": "5.1.0",
+        "gulp-istanbul": "^0.10.4",
+        "gulp-mocha": "2.1.3",
+        "gulp-plumber": "1.0.0",
+        "gulp-uglify": "1.2.0",
+        "gulp-watch": "4.3.5",
+        "isparta": "^3.0.3",
+        "mocha": "2.2.5",
+        "sinon": "1.17.0",
+        "standard": "^7.1.1",
+        "supertest": "1.1.0"
+    },
+    "standard": {
+        "globals": [
+            "before",
+            "describe",
+            "beforeEach",
+            "afterEach",
+            "it",
+            "expect"
+        ]
+    }
 }
