Revert "adding readme partially"
This reverts commit fd7ee3b2611aa4c251d3d586f5c75f08d7f81791.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     },
     "keywords": [],
     "scripts": {
-        "start": "npm run lint && gulp && node ./dist/app dev",
-        "prod": "npm run lint && gulp && node ./dist/app prod",
+        "start": "gulp && node ./dist/app dev",
         "test": "npm run lint && gulp test:unit",
         "lint": "standard ./src/**/*.js --verbose",
         "docs": "esdoc -c esdoc.json"
