--- a/package.json
+++ b/package.json
@@ -1,56 +1,58 @@
 {
-    "name": "soft-name",
-    "version": "0.0.1",
-    "description": "App description",
-    "main": "./dist/app.js",
-    "homepage": "",
-    "repository": {
-        "type": "git",
-        "url": "http//github.com/"
-    },
-    "keywords": [],
-    "scripts": {
-        "start": "gulp && node ./dist/app dev",
-        "test": "npm run lint && gulp test:unit",
-        "lint": "standard ./src/**/*.js --verbose",
-        "docs": "esdoc -c esdoc.json"
-    },
-    "author": "Marvin Frachet",
-    "license": "MIT",
-    "dependencies": {
-        "colors": "1.1.2",
-        "bunyan": "1.5.1",
-        "js-yaml": "3.4.3"
-    },
-    "devDependencies": {
-        "babel-core": "^5.5.0",
-        "babel-preset-es2015": "^6.5.0",
-        "chai": "3.0.0",
-        "coveralls": "^2.11.9",
-        "del": "2.0.2",
-        "chai-spies": "^0.7.1",
-        "esdoc": "0.4.3",
-        "gulp": "^3.9.1",
-        "gulp-babel": "5.1.0",
-        "gulp-istanbul": "^0.10.4",
-        "gulp-mocha": "2.1.3",
-        "gulp-plumber": "1.0.0",
-        "gulp-uglify": "1.2.0",
-        "gulp-watch": "4.3.5",
-        "isparta": "^3.0.3",
-        "mocha": "2.2.5",
-        "sinon": "1.17.0",
-        "standard": "^7.1.1",
-        "supertest": "1.1.0"
-    },
-    "standard": {
-        "globals": [
-            "before",
-            "describe",
-            "beforeEach",
-            "afterEach",
-            "it",
-            "expect"
-        ]
-    }
+  "name": "soft-name",
+  "version": "0.0.1",
+  "description": "App description",
+  "main": "./dist/app.js",
+  "homepage": "",
+  "repository": {
+    "type": "git",
+    "url": "http//github.com/"
+  },
+  "keywords": [],
+  "scripts": {
+    "start": "gulp && node ./dist/app dev",
+    "test": "ava",
+    "lint": "standard ./src/**/*.js --verbose",
+    "docs": "esdoc -c esdoc.json"
+  },
+  "author": "Marvin Frachet",
+  "license": "MIT",
+  "dependencies": {
+    "bunyan": "1.5.1",
+    "colors": "1.1.2",
+    "js-yaml": "3.4.3"
+  },
+  "devDependencies": {
+    "ava": "^0.19.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "coveralls": "^2.13.0",
+    "del": "^2.2.2",
+    "esdoc": "^0.5.2",
+    "gulp": "^3.9.1",
+    "gulp-plumber": "1.0.0",
+    "gulp-uglify": "1.2.0",
+    "gulp-watch": "4.3.5",
+    "sinon": "^2.1.0",
+    "standard": "^10.0.1"
+  },
+  "ava": {
+    "files": [
+      "src/test/**/*.test.js"
+    ],
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
+  },
+  "standard": {
+    "globals": [
+      "before",
+      "describe",
+      "beforeEach",
+      "afterEach",
+      "it",
+      "expect"
+    ]
+  }
 }
