--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "keywords": [],
   "scripts": {
-    "start": "gulp && node ./dist/app dev",
-    "test": "ava",
-    "lint": "standard ./src/**/*.js --verbose",
-    "docs": "esdoc -c esdoc.json"
+    "build": "./node_modules/.bin/gulp",
+    "start": "./node_modules/.bin/gulp && node ./dist/app dev",
+    "test": "./node_modules/.bin/ava",
+    "lint": "./node_modules/.bin/standard ./src/**/*.js --verbose",
+    "docs": "./node_modules/.bin/esdoc -c esdoc.json"
   },
   "author": "Marvin Frachet",
   "license": "MIT",
   "dependencies": {
-    "bunyan": "1.5.1",
-    "colors": "1.1.2",
-    "js-yaml": "3.4.3"
+    "bunyan": "^1.8.10",
+    "colors": "^1.1.2",
+    "js-yaml": "^3.8.3"
   },
   "devDependencies": {
     "ava": "^0.19.1",
@@ -30,9 +31,9 @@
     "del": "^2.2.2",
     "esdoc": "^0.5.2",
     "gulp": "^3.9.1",
-    "gulp-plumber": "1.0.0",
-    "gulp-uglify": "1.2.0",
-    "gulp-watch": "4.3.5",
+    "gulp-babel": "^6.1.2",
+    "gulp-plumber": "^1.1.0",
+    "gulp-uglify": "^2.1.2",
     "sinon": "^2.1.0",
     "standard": "^10.0.1"
   },
