Adding a bootstrap command to prepare the project

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "keywords": [],
   "scripts": {
+    "bootstrap": "yarn install --dev && npm run build:prod && echo 'Bootstrap finished :D'",
     "build": "./node_modules/.bin/gulp",
-    "build:prod": "npm run lint && ./node_modules/.bin/gulp && node ./dist/app prod",
+    "build:prod": "npm run lint && ./node_modules/.bin/gulp && cd ./dist && yarn install --production",
     "start": "./node_modules/.bin/gulp && node ./dist/app dev",
     "test": "./node_modules/.bin/ava",
     "lint": "./node_modules/.bin/standard ./src/**/*.js --verbose",
