--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ node_js:
   - "0.11"
   - "0.10"
 after_script:
-  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - './node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls'
