--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: node_js
 node_js:
   - "6"
   - "4"
-  - "0.12"
-  - "0.11"
-  - "0.10"
+before_script:
+  - npm install -g yarn
 after_script:
   - './node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls'
