--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["es2015"]
+  "plugins": [
+    "transform-class-properties", 
+    "babel-plugin-transform-runtime"
+  ],
+  "presets": [
+    "es2015", 
+    "@ava/stage-4", 
+    "@ava/transform-test-files"
+  ]
 }
