--- a/package.json
+++ b/package.json
@@ -20,12 +20,20 @@
   "author": "Marvin Frachet",
   "license": "MIT",
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
     "bunyan": "^1.8.10",
     "colors": "^1.1.2",
-    "js-yaml": "^3.8.3"
+    "js-yaml": "^3.8.3",
+    "nightmare": "^2.10.0",
+    "osmosis": "^1.1.4",
+    "pg": "^6.4.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.2.0",
+    "sequelize-connect": "^2.0.0"
   },
   "devDependencies": {
     "ava": "^0.19.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
     "coveralls": "^2.13.0",
